# CEU

./: .gitignore  CMakeLists.txt  README.md
core/header/CEU/exception/: BaseException.hpp  ErrorCode.hpp  FileReaderException.hpp  FileWriterException.hpp  InvalidReadProcessMemoryDataException.h  InvalidWriteProcessMemoryDataException.h  NotExistsFileException.hpp  NotExistsProcessException.hpp
core/header/CEU/io/: BinaryFileIO.hpp  BinaryFileReader.hpp  BinaryFileWriter.hpp  PlainTextFileIO.hpp  PlainTextFileReader.hpp  PlainTextFileWriter.hpp
core/header/CEU/memory/: LinuxProcess.hpp
core/source/CEU/io/: BinaryFileIO.cpp  BinaryFileReader.cpp  BinaryFileWriter.cpp  PlainTextFileIO.cpp  PlainTextFileReader.cpp  PlainTextFileWriter.cpp
core/source/CEU/memory/: LinuxProcess.cpp
test/header/: User.hpp
test/source/: User.cpp  main.cpp
